# LogisticsDemo

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: inference.py  sessions.py  telemetry.py
backend/app/core/: agent_graph.py  rag_engine.py
backend/app/models/: schemas.py
backend/app/simulator/: __init__.py  sensor_simulator.py
backend/tests/: test_agent_graph.py  test_api.py  test_integration.py  test_models.py  test_rag_engine.py  test_rag_real.py  test_simulator.py
docs/巡检手册/: 01_系统总纲与园区概述.md  02_巡检机器人硬件规格说明书.md  03_巡检路径规划与调度系统操作手册.md  04_跨境货物智能识别与分类规程.md  05_海关申报数据接口对接规范.md  06_异常货物处置标准操作程序.md  07_机器人视觉检测系统校准手册.md  08_数据安全与隐私保护管理规程.md  09_值班交接与巡检记录管理制度.md  10_应急响应与故障处理预案.md  11_法律合规与监管要求汇编.md  12_巡检机器人维护保养手册.md  13_跨境电商监管平台对接规范.md  14_仓储区域划分与巡检覆盖标准.md  15_温湿度监控与货物保全规程.md  16_人员协同作业安全规范.md  17_巡检数据分析与报表系统手册.md  18_系统升级与版本管理规程.md  19_供应链可视化追踪集成手册.md  20_年度审计与合规认证指南.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/dashboard/: CommandConsole.tsx  MissionDashboard.tsx  ScenarioTrigger.tsx  SensorChart.tsx  ThoughtChainPanel.tsx
frontend/hooks/: useApi.ts
frontend/tests/e2e/: dashboard.spec.ts
k8s/: backend-deployment.yaml  frontend-deployment.yaml
