[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omni-guard-backend"
version = "1.0.0"
description = "Zhuoshi-OmniGuard 智巡护航 Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "real: 真实集成测试（需要 chromadb + sentence-transformers，会下载模型）",
    "integration: 完整链路集成测试（需要本地 LLM）",
    "e2e: 端对端测试（需要前后端同时运行）",
]
